Fix[Swagger && Get Turmas Categoria+Eixo]
